@@ -5,6 +5,7 @@ ovirt-host-deploy -- oVirt host deploy
  * kdump: initial support. rhbz#1079821.
  * vdsmhooks: fix package installation.
  * vdsm: fix dmidecode output parsing, rhbz#1109342.
+ * gluster: Restart nrpe service during host deploy, rhbz#1110623.
 
 2014-05-02 - Version 1.2.1
 
